<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.smartmirrorsw.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_main" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartmirrorsw.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_createAccount"
        android:name="com.example.smartmirrorsw.ui.login.createaccount.CreateAccountFragment"
        android:label="@string/menu_createAccount"
        tools:layout="@layout/fragment_createaccount" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.smartmirrorsw.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
s
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.smartmirrorsw.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.smartmirrorsw.ui.hardware.HardwareFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.smartmirrorsw.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

</navigation>